--- a/package.json
+++ b/package.json
@@ -9,12 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
+    "@next-auth/firebase-adapter": "^1.0.1",
+    "firebase": "^9.11.0",
+    "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moment": "^1.1.2",
+    "recoil": "^0.7.5",
+    "request": "^2.79.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.1.8"
   }
 }
