--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
   
-  "extends": "next/core-web-vitals",
+  "extends": ["next","plugin:react/recommended"],
+  
+  
   "rules": {
     // Other rules
     "@next/next/no-img-element": "off"
   }
-}
+  
 
- 
+}
