--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@heroicons/react": "^2.0.12",
     "@next-auth/firebase-adapter": "^1.0.1",
     "firebase": "^9.11.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moment": "^1.1.2",
     "recoil": "^0.7.5",
     "request": "^2.79.0",
     "tailwind-scrollbar-hide": "^1.1.7"
@@ -27,6 +30,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.17",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.8"
